--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Next_u</title>
+<title>Mi rayito de luna</title>
 </head>
 <body>
-Coloca aquí todo el contenido de tu página<br>
-que pronto será sincronizada
+Te amo mucho mi rayito de luna<br>
+siempre pienso en ti
 </body>
 </html>
